semantic/src/test_cases/bad/test23.cl
(* Inherit from Int, String, or Bool *)

class A inherits Int {
    a : Int;
};

class B inherits String {
    a : Int;
};

class C inherits Bool {
    a : Int;
};

class Main {
    main() : Int {
        0
    };
};
